--- a/index.html
+++ b/index.html
@@ -5,9 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Abyrax</title>
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    <h1>Hello World</h1>
-    <p>I'm hosted with GitHub Pages.</p>
+    <div class="bg">
+        <div class="topLeft">
+            <p>Welcome.</p>
+        </div>
+        <div class="mid">
+            <h1>Ahmet Burak Yuksel</h1>
+        </div>
+        <div class="botLeft">
+            <p>.</p>
+        </div>
+    </div>
 </body>
 </html>
