--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <p>Welcome.</p>
         </div>
         <div class="mid">
-            <h1>Ahmet Burak Yuksel</h1>
+            <p>Ahmet Burak Yuksel</p>
         </div>
         <div class="botLeft">
             <p>.</p>
