--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Abyrax</title>
     <link rel="stylesheet" href="index.css">
+    <link rel="shortcut icon" type="image/png" href="/img/favicon.png"/>
 </head>
 <body>
     <div class="bg">
