--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <p>Welcome.</p>
         </div>
         <div class="mid">
-            <p>Ahmet Burak Yuksel</p>
+            <p>Coming soon.</p>
         </div>
         <div class="botLeft">
             <p>.</p>
