--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Abyrax</title>
+    <title>Ahmet Burak Yuksel</title>
     <link rel="stylesheet" href="index.css">
     <link rel="shortcut icon" type="image/png" href="/img/favicon.png"/>
 </head>
@@ -18,6 +18,17 @@
         </div>
         <div class="botLeft">
             <p>.</p>
+            <p>.</p>
+            <p>.</p>
+            <p>.</p>
+            <p>.</p>
+        </div>
+        <div class="bgsocial">
+            <a  href="https://www.facebook.com/abyrax"><img src="/img/facebook.png" ></a>
+            <a  href="https://www.instagram.com/abyrax"><img src="/img/instagram.png" ></a>
+            <a  href="https://www.github.com/abyrax"><img src="/img/github.png" ></a>
+            <a  href="https://www.linkedin.com/abyrax"><img src="/img/linkedin.png" ></a>
+            <a  href="mailto:abyrax@gmail.com"><img src="/img/gmail.png" ></a>
         </div>
     </div>
 </body>
