--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <a  href="https://www.facebook.com/abyrax"><img src="/img/facebook.png" ></a>
             <a  href="https://www.instagram.com/abyrax"><img src="/img/instagram.png" ></a>
             <a  href="https://www.github.com/abyrax"><img src="/img/github.png" ></a>
-            <a  href="https://www.linkedin.com/abyrax"><img src="/img/linkedin.png" ></a>
+            <a  href="https://www.linkedin.com/in/abyrax"><img src="/img/linkedin.png" ></a>
             <a  href="mailto:abyrax@gmail.com"><img src="/img/gmail.png" ></a>
         </div>
     </div>
