--- a/index.html
+++ b/index.html
@@ -1,35 +1,184 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ahmet Burak Yuksel</title>
-    <link rel="stylesheet" href="index.css">
-    <link rel="shortcut icon" type="image/png" href="/img/favicon.png"/>
+  <title>Ahmet Burak Yuksel</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="style.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="https://kit.fontawesome.com/31149d48b0.js" crossorigin="anonymous"></script>
+  <link href="https://fonts.googleapis.com/css2?family=Space+Mono&display=swap" rel="stylesheet">
+  <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 </head>
 <body>
-    <div class="bg">
-        <div class="topLeft">
-            <p>Welcome.</p>
+    <!--nav-->
+    <nav class="navbar navbar-expand-lg fixed-top navbar-dark navbarScroll">
+        <div class="container">
+            <a class="navbar-brand" href="#">Ahmet Burak Yuksel</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item active">
+                        <a class="nav-link" href="#welcome">welcome</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#about">about</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#projects">projects</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#contact">contact</a>
+                    </li>
+                </ul>
+            </div>
         </div>
-        <div class="mid">
-            <p>Coming soon.</p>
+    </nav>
+    <!--welcome-->
+    <section class="bgimage" id="welcome">
+        <div class="container-fluid">
+            <div class="row">
+            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 welcpage">
+                <h2 class="welc">Hello, I'm Ahmet Burak Yuksel</h2>
+                <p class="welcmsg">Welcome to my personal website</p>
+            </div>
+            </div>
         </div>
-        <div class="botLeft">
-            <p>.</p>
-            <p>.</p>
-            <p>.</p>
-            <p>.</p>
-            <p>.</p>
+    </section>
+    <!--about-->
+    <section id="about">
+        <div class="container mt-4 pt-4">
+            <h1 class="text-center">About Me</h1>
+            <div class="row mt-4">
+                <div class="col-lg-4">
+                    <img src="img/pp.png" class= "imgabout" alt="">
+                </div>
+                <div class="col-lg-8">
+                    <p> I'm a 3th year Information Systems and Technology student at Bilkent University. I'm eager 
+                        to learn new things about software development field. Currently, looking for an opportunity to
+                         utilize my skills in a professional work area.
+                    </p>
+                    <div class="row mt-3">
+                        <div>
+                            <ul>
+                                <li>Bilkent University, Information Systems and Technology</li>
+                                <ul>
+                                    <li>09/2018–05/2024  ,  Ankara, Turkey</li>
+                                </ul>
+                                <li>Metropolia University of Applied Sciences, Information Technology</li>
+                                <ul>
+                                    <li>01/2022–05/2022  ,  Helsinki, Finland</li>
+                                </ul>
+                                <br>
+                                <li>Languages: C, Java, HTML, CSS, JavaScript, PHP, SQL, Python</li>
+                                <li>Technologies: Git, Linux, GLUT, OpenGL, jQuery, Unity Engine, Android Studio</li>
+                                
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="row mt-3">
+                        <div class="text-center">
+                            <a href="img/CVYukselAB.pdf" class="btn btn-success">Click for Resume</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+    </section>
+    <!--projects-->
+    <section id="projects">
+        <div class="container mt-3">
+            <h1 class="text-center">Projects</h1>
+            <div class="row">
+                <div class="col-lg-4 mt-4">
+                    <div class="card">
+                        <img class="card-img-top" src="img/164.gif" alt="Card image" height="225px" style="width:100%">
+                        <div class="card-body">
+                            <h4 class="card-title">CTIS-164</h4>
+                            <p class="card-text">Mini game projects created with C, GLUT and OpenGL Libraries. </p>
+                            <div class="text-center">
+                                <a href="https://github.com/Abyrax" class="btn btn-success">GitHub Link</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 mt-4">
+                    <div class="card portfolioContent">
+                        <img class="card-img-top" src="img/javaproject.png" alt="Card image" height="225px" style="width:100%">
+                        <div class="card-body">
+                            <h4 class="card-title">CTIS-221</h4>
+                            <p class="card-text">Object Oriented GUI based JAVA Project.</p>
+                            <br>
+                            <div class="text-center">
+                                <a href="https://github.com/Abyrax/CTIS221-P-VideoGameCustomerInformationSystem" class="btn btn-success">GitHub Link</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 mt-4">
+                    <div class="card portfolioContent">
+                        <img class="card-img-top" src="img/click.gif" alt="Card image" height="225px" style="width:100%">
+                        <div class="card-body">
+                            <h4 class="card-title">CTIS-255</h4>
+                            <p class="card-text">Click Challenge game created with HTML, CSS & JavaScript (jQuery).</p>
+                            <div class="text-center">
+                                <a href="https://github.com/Abyrax" class="btn btn-success">GitHub Link</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <br>
+            <div class="row">
+                <div class="col-lg-4 mt-4">
+                    <div class="card portfolioContent">
+                        <img class="card-img-top" src="img/aws.png" alt="Card image" height="225px" style="width:100%">
+                        <div class="card-body">
+                            <h4 class="card-title">Amazon Web Services</h4>
+                            <p class="card-text">Cloud Arch. Capstone Project.</p>
+                            <div class="text-center">
+                                <a href="https://www.credly.com/badges/d1a3b0d1-111b-458e-8969-5cb96b754eb4?source=linked_in_profile" class="btn btn-success">Credly Link</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 mt-4">
+                    <div class="card portfolioContent">
+                        <img class="card-img-top" src="img/question.png" alt="Card image" height="225px" style="width:100%">
+                        <div class="card-body">
+                            <h4 class="card-title">Under Development</h4>
+                            <p class="card-text">Android Studio Project with JAVA.</p>
+                            <div class="text-center">
+                                <a href="#Projects" class="btn btn-success">Coming Soon</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 mt-4">
+                    <div class="card portfolioContent">
+                        <img class="card-img-top" src="img/question.png" alt="Card image" height="225px" style="width:100%">
+                        <div class="card-body">
+                            <h4 class="card-title">Under Development</h4>
+                            <p class="card-text">Backend Project w/ PHP and MySQL.</p>
+                            <div class="text-center">
+                                <a href="#Projects" class="btn btn-success">Coming Soon</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+    </section>
+    <!--contact-->
+    <section class="contact" id="contact" style="margin-top:30px ;">
+            <h1 class="text-center" id="cTitle">Contact Me</h1>
+        <div class="socials">
+            <a href="https://www.linkedin.com/in/abyrax"><img src="/img/linkedin.png"></a>
+            <a href="https://www.github.com/abyrax"><img src="/img/github.png"></a>
+            <a href="mailto:abyrax@gmail.com"><img src="/img/gmail.png" ></a>
         </div>
-        <div class="bgsocial">
-            <a  href="https://www.facebook.com/abyrax"><img src="/img/facebook.png" ></a>
-            <a  href="https://www.instagram.com/abyrax"><img src="/img/instagram.png" ></a>
-            <a  href="https://www.github.com/abyrax"><img src="/img/github.png" ></a>
-            <a  href="https://www.linkedin.com/in/abyrax"><img src="/img/linkedin.png" ></a>
-            <a  href="mailto:abyrax@gmail.com"><img src="/img/gmail.png" ></a>
-        </div>
-    </div>
+    </section>
+    <script src="script.js"></script>
 </body>
 </html>
