--- a/index.html
+++ b/index.html
@@ -146,9 +146,9 @@
                 </div>
                 <div class="col-lg-4 mt-4">
                     <div class="card portfolioContent">
-                        <img class="card-img-top" src="img/question.png" alt="Card image" height="225px" style="width:100%">
+                        <img class="card-img-top" src="img/w2w.png" alt="Card image" height="225px" style="width:100%">
                         <div class="card-body">
-                            <h4 class="card-title">Under Development</h4>
+                            <h4 class="card-title">CTIS-487</h4>
                             <p class="card-text">Android Studio Project with JAVA.</p>
                             <div class="text-center">
                                 <a href="#Projects" class="btn btn-success">Coming Soon</a>
@@ -158,9 +158,9 @@
                 </div>
                 <div class="col-lg-4 mt-4">
                     <div class="card portfolioContent">
-                        <img class="card-img-top" src="img/question.png" alt="Card image" height="225px" style="width:100%">
+                        <img class="card-img-top" src="img/w2w.gif" alt="Card image" height="225px" style="width:100%">
                         <div class="card-body">
-                            <h4 class="card-title">Under Development</h4>
+                            <h4 class="card-title">CTIS-256</h4>
                             <p class="card-text">Backend Project w/ PHP and MySQL.</p>
                             <div class="text-center">
                                 <a href="#Projects" class="btn btn-success">Coming Soon</a>
