--- a/index.html
+++ b/index.html
@@ -73,15 +73,15 @@
                                     <li>01/2022–05/2022  ,  Helsinki, Finland</li>
                                 </ul>
                                 <br>
-                                <li>Languages: C, Java, HTML, CSS, JavaScript, PHP, SQL, Python</li>
-                                <li>Technologies: Git, Linux, GLUT, OpenGL, jQuery, Unity Engine, Android Studio</li>
+                                <li>Languages: C, C++, Java, HTML, CSS, JavaScript, PHP, SQL, Python</li>
+                                <li>Technologies: Git, Linux, GLUT, OpenGL, jQuery, Unity Engine, Android Studio, Qt</li>
                                 
                             </ul>
                         </div>
                     </div>
                     <div class="row mt-3">
                         <div class="text-center">
-                            <a href="img/CVYukselAB.pdf" class="btn btn-success">Click for Resume</a>
+                            <a href="img/abycv.pdf" class="btn btn-success">Click for Resume</a>
                         </div>
                     </div>
                 </div>
@@ -151,7 +151,7 @@
                             <h4 class="card-title">CTIS-487</h4>
                             <p class="card-text">Android Studio Project with JAVA.</p>
                             <div class="text-center">
-                                <a href="#Projects" class="btn btn-success">Coming Soon</a>
+                                <a href="https://github.com/Abyrax/w2w" class="btn btn-success">Github Link</a>
                             </div>
                         </div>
                     </div>
@@ -163,7 +163,7 @@
                             <h4 class="card-title">CTIS-256</h4>
                             <p class="card-text">Backend Project w/ PHP and MySQL.</p>
                             <div class="text-center">
-                                <a href="#Projects" class="btn btn-success">Coming Soon</a>
+                                <a href="https://github.com/Abyrax" class="btn btn-success">Github Link</a>
                             </div>
                         </div>
                     </div>
