--- a/index.html
+++ b/index.html
@@ -378,6 +378,21 @@
               <i class="ri-instagram-fill" style="font-size: 52px;"></i>
             </a>
           </li>
+          <li>
+            <a href="https://www.youtube.com/@Abyrax" target="_blank" style="text-decoration: none;">
+              <i class="ri-youtube-fill" style="font-size: 52px;"></i>
+            </a>
+          </li>
+          <li>
+            <a href="https://steamcommunity.com/id/Abyrax" target="_blank" style="text-decoration: none;">
+              <i class="ri-steam-fill" style="font-size: 52px;"></i>
+            </a>
+          </li>
+          <li>
+            <a href="https://psnprofiles.com/Abyrax-" target="_blank" style="text-decoration: none;">
+              <i class="ri-playstation-fill" style="font-size: 52px;"></i>
+            </a>
+          </li>
         </ul>
       </div>
     </section>
