--- a/index.html
+++ b/index.html
@@ -67,16 +67,13 @@
       <div class="container">
         <div class="row">
           <div class="col-12 col-sm-12  col-md-6  col-lg-7  col-xl-7  col-xxl-7 ds-banner-left">
+            <br><br><br><br>
               <h1 class="ds-banner-hed">
                 Hello,
               </h1>
               <h1 class="ds-banner-hed">
                 I am <span style="color:#CBFE00;">Burak</span>.
-              </h1>
-              <span>-----------------------------------------------------------</span>
-              <h1 class="ds-banner-hed">
-                Welcome to my personal website.
-              </h1>
+              </h1>              
               <ul class="ds-social">
                 <li><a href="https://www.linkedin.com/in/abyrax" target="_blanck"><i class="ri-linkedin-fill"></i></a></li>
                 <li><a href="https://www.github.com/abyrax" target="_blanck"><i class="ri-github-fill"></i></a></li>
@@ -106,7 +103,7 @@
                   <span style="color:#ffffff;">Unreal Engine 5</span>, which earned my team the <span style="color:#ffffff;">Best Project Award</span>.
                   I was also honored to receive the <span style="color:#ffffff;">Best Intern Award</span> during both my test and software engineering internships.
                   My work experience has improved my abilities in programming, testing, and collaborating within cross-functional teams.</p>
-                <a href="assets/images/abyukselcv.pdf" class="ds-download-button">Download Resume <i class="ri-download-line"></i></a>
+                <a href="assets/images/CV-Yuksel-AhmetBurak.pdf" class="ds-download-button">Download Resume <i class="ri-download-line"></i></a>
               </div>
               <div class="col-12 col-sm-12  col-md-6  col-lg-6  col-xl-6  col-xxl-6">
                 <br><br><br>
@@ -180,7 +177,7 @@
                 </figure>
                 <section>
                   <h3>Knight of the Alliance</h3>
-                  <span>An award-winning immersive RPG developed in Unreal Engine 5, offers<br> players an engaging medieval journey through medieval-themed Bilkent University, featuring interactive gameplay with ChatGPT-integrated NPCs.</span>
+                  <span>An award-winning senior project developed in Unreal Engine 5, offers<br> players an engaging medieval journey through medieval-themed Bilkent University, featuring interactive gameplay with ChatGPT-integrated NPCs.</span>
                 </section>
             </div>
             <div class="col-12 col-sm-12  col-md-4  col-lg-4  col-xl-6  col-xxl-6 ds-projects-loop">
@@ -193,35 +190,56 @@
                   <span>A Third Person game developed in Unreal Engine 5, featuring an advanced Gameplay Ability System, dynamic combat, AI-driven enemies, and an <br>intricate leveling system with attributes, spells, and abilities.</span>
                 </section>
             </div>
-            <div><br><br></div>            
+            <div><br><br></div>
+            <div class="col-12 col-sm-12  col-md-4  col-lg-4  col-xl-6  col-xxl-6 ds-projects-loop">
+              <figure>
+                <a href="https://github.com/Abyrax/UE5-2DPlatformer" class="ds-link-button"><i class="ri-external-link-line"></i></a>
+                <img src="assets/images/2dplatform.png" class="ds-image-shadow transition">
+              </figure>
+              <section>
+                <h3>2D Platformer</h3>
+                <span>Developed a 2D platformer in Unreal Engine 5 using C++, featuring <br>mechanics like jumper platforms, falling platforms, traps, and enemy <br>catching gameplay.</span>
+              </section>
+          </div>
+          <div class="col-12 col-sm-12  col-md-4  col-lg-4  col-xl-6  col-xxl-6 ds-projects-loop">
+              <figure>
+                <a href="https://youtu.be/YjU7qodih6g" class="ds-link-button"><i class="ri-external-link-line"></i></a>
+                <img src="assets/images/various.png" class="ds-image-shadow transition">
+              </figure>
+              <section>
+                <h3>Parkour Trials</h3>
+                <span>Created various projects in Unreal Engine 5 during the learning process <br>using Udemy courses. Projects showcased the integration of both C++ <br>and Blueprints.</span>
+              </section>
+          </div>
+          <div><br><br></div>            
             <div class="col-12 col-sm-12  col-md-4  col-lg-4  col-xl-4  col-xxl-4 ds-projects-loop">
                 <figure>
-                  <a href="#" class="ds-link-button"><i class="ri-external-link-line"></i></a>
-                  <img src="assets/images/lapland.jpeg" class="ds-image-shadow transition">
+                  <a href="https://www.credly.com/badges/d1a3b0d1-111b-458e-8969-5cb96b754eb4?source=linked_in_profile" class="ds-link-button"><i class="ri-external-link-line"></i></a>
+                  <img src="assets/images/capstone.png" class="ds-image-shadow transition">
                 </figure>
                 <section>
-                  <h3>Upcoming project</h3>
-                  <span>Details soon...</span>
+                  <h3>Amazon Web Services</h3>
+                  <span>Developed a cloud architecture capstone project utilizing AWS, focusing on designing and implementing scalable, secure, and efficient <br>cloud solutions to solve real-world challenges.</span>
                 </section>
             </div>
             <div class="col-12 col-sm-12  col-md-4  col-lg-4  col-xl-4  col-xxl-4 ds-projects-loop">
                 <figure>
-                  <a href="https://github.com/Abyrax/CTIS221-P-VideoGameCustomerInformationSystem" class="ds-link-button"><i class="ri-external-link-line"></i></a>
+                  <a href="https://github.com/Abyrax/CTIS164-P3-VirusHunting" class="ds-link-button"><i class="ri-external-link-line"></i></a>
                   <img src="assets/images/projects-1.gif" class="ds-image-shadow transition">
                 </figure>
                 <section>
-                  <h3>CTIS-221</h3>
-                  <span>Object oriented GUI based Java project for video game & customer information system.</span>
+                  <h3>CTIS-164</h3>
+                  <span>Developed mini-game projects as part of the course, using C, GLUT and OpenGL libraries. Projects demonstrated foundational graphics programming skills and interactive game design principles.</span>
                 </section>
             </div>
             <div class="col-12 col-sm-12  col-md-4  col-lg-4  col-xl-4  col-xxl-4 ds-projects-loop">
                 <figure>
-                  <a href="#" class="ds-link-button"><i class="ri-external-link-line"></i></a>
-                  <img src="assets/images/lapland.jpeg" class="ds-image-shadow transition">
+                  <a href="https://github.com/Abyrax/CTIS487-AndroidProject-W2W" class="ds-link-button"><i class="ri-external-link-line"></i></a>
+                  <img src="assets/images/android.png" class="ds-image-shadow transition">
                 </figure>
                 <section>
-                  <h3>Upcoming project</h3>
-                  <span>Details soon...</span>
+                  <h3>CTIS-487</h3>
+                  <span>Mobile application in Java using Android Studio as part of the course showcasing upcoming movies, featuring functionalities like movie listings, release dates, and detailed information.</span>
                 </section>
             </div>
             <div><br><br></div>
@@ -262,7 +280,7 @@
     <!-- testimonials -->
     <section class="ds-testimonials-section" id="gallery">
       <div class="container">
-          <h2><span>in game screenshots</span></h2>
+          <h2><span>screenshots from my favourite games</span></h2>
           <div class="ds-testimonials-slider">
             <div class="ds-testimonials-loop">
               <article style="display: flex; justify-content: center; align-items: center;">
