--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
     <!-- testimonials -->
     <section class="ds-testimonials-section" id="gallery">
       <div class="container">
-          <h2><span>screenshots from my favourite games</span></h2>
+          <h2><span>screenshots from my sight</span></h2>
           <div class="ds-testimonials-slider">
             <div class="ds-testimonials-loop">
               <article style="display: flex; justify-content: center; align-items: center;">
